objects/AW_WorkflowTask__c.object
<CustomObject>
    <description>This is an object to store external workflow tasks retrieved from external system(s). These represent outstanding items requested by advisers to the fulfilment team.</description>
    <fields>
        <fullName>AW_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to the related account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workflow Tasks</relationshipLabel>
        <relationshipName>Workflow_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An adviser will select this checkbox to indicate that this client’s work has been completed.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_ContractNumber__c</fullName>
        <description>Contract Number related to the workflow task</description>
        <label>Contract Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Description__c</fullName>
        <description>Description of the workflow task</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_IdentityNumber__c</fullName>
        <description>ID Number of Account</description>
        <label>Identity Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Initials__c</fullName>
        <description>Initials of Account</description>
        <label>Initials</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Key__c</fullName>
        <description>Key for the Workflow task</description>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_LastName__c</fullName>
        <description>Last Name of Account</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_ProcessingStatus__c</fullName>
        <description>Select Processing Status</description>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Underwriting requirements outstanding</fullName>
                </value>
                <value>
                    <fullName>Underwriting requirements completed</fullName>
                </value>
                <value>
                    <fullName>Awaiting outstanding requirements</fullName>
                </value>
                <value>
                    <fullName>Referred to operations</fullName>
                </value>
                <value>
                    <fullName>Invalidated</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Policy loaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_RequirementDate__c</fullName>
        <description>Date of requirement</description>
        <label>Requirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_Role__c</fullName>
        <description>Role of the account</description>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Source__c</fullName>
        <description>Source of the task</description>
        <label>Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Status__c</fullName>
        <description>Status of the task</description>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_UpdateISN__c</fullName>
        <description>Update ISN External ID</description>
        <externalId>true</externalId>
        <label>Update ISN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Workflow Task</label>
    <listViews>
        <fullName>AW_AllCompletedWorkflowTasks</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>AW_Completed__c</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_LastName__c</columns>
        <columns>AW_IdentityNumber__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_Description__c</columns>
        <columns>AW_Status__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <columns>AW_ContractNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AW_Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>AW_ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Approved,Policy loaded</value>
        </filters>
        <label>All Completed Workflow Tasks</label>
        <sharedTo>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <role>AW_LibertySupport</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AW_AllDeclinedWorkflowTasks</fullName>
        <columns>NAME</columns>
        <columns>AW_Completed__c</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_LastName__c</columns>
        <columns>AW_IdentityNumber__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_Description__c</columns>
        <columns>AW_Status__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <columns>AW_ContractNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AW_ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Invalidated,Declined</value>
        </filters>
        <label>All Declined Workflow Tasks</label>
        <sharedTo>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <role>AW_LibertySupport</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AW_AllOutstandingWorkflowTasks</fullName>
        <columns>NAME</columns>
        <columns>AW_Completed__c</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_LastName__c</columns>
        <columns>AW_IdentityNumber__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_Description__c</columns>
        <columns>AW_Status__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <columns>AW_ContractNumber__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AW_Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AW_ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>In progress,Underwriting requirements outstanding,Underwriting requirements completed,Awaiting outstanding requirements,Referred to operations</value>
        </filters>
        <label>All Outstanding Workflow Tasks</label>
        <sharedTo>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_LibertyAdministrators</group>
            <group>AW_SalesLeader</group>
            <role>AW_LibertySupport</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AW_CompletedWorkflowTasks</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>AW_Completed__c</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_LastName__c</columns>
        <columns>AW_IdentityNumber__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_Description__c</columns>
        <columns>AW_Status__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <columns>AW_ContractNumber__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AW_Completed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>AW_ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Approved,Policy loaded</value>
        </filters>
        <label>My Completed Workflow Tasks</label>
    </listViews>
    <listViews>
        <fullName>AW_DeclinedWorkflowTasks</fullName>
        <columns>NAME</columns>
        <columns>AW_Completed__c</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_LastName__c</columns>
        <columns>AW_IdentityNumber__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_Description__c</columns>
        <columns>AW_Status__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <columns>AW_ContractNumber__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AW_ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>Invalidated,Declined</value>
        </filters>
        <label>My Declined Workflow Tasks</label>
    </listViews>
    <listViews>
        <fullName>AW_OutstandingWorkflowTasks</fullName>
        <columns>NAME</columns>
        <columns>AW_Completed__c</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_LastName__c</columns>
        <columns>AW_IdentityNumber__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_Description__c</columns>
        <columns>AW_Status__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <columns>AW_ContractNumber__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AW_Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>AW_ProcessingStatus__c</field>
            <operation>equals</operation>
            <value>In progress,Underwriting requirements outstanding,Underwriting requirements completed,Awaiting outstanding requirements,Referred to operations</value>
        </filters>
        <label>My Outstanding Workflow Tasks</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AW_Completed__c</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_LastName__c</columns>
        <columns>AW_IdentityNumber__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_Description__c</columns>
        <columns>AW_Status__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <columns>AW_ContractNumber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Workflow Tasks</label>
        <sharedTo>
            <group>AW_CustomerAndAdviserExecutive</group>
            <group>AW_SalesLeader</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Workflow_Tasks</fullName>
        <columns>NAME</columns>
        <columns>AW_Completed__c</columns>
        <columns>AW_Account__c</columns>
        <columns>AW_LastName__c</columns>
        <columns>AW_IdentityNumber__c</columns>
        <columns>AW_ProcessingStatus__c</columns>
        <columns>AW_Description__c</columns>
        <columns>AW_Status__c</columns>
        <columns>AW_RequirementDate__c</columns>
        <columns>AW_ContractNumber__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Workflow Tasks</label>
    </listViews>
    <nameField>
        <displayFormat>WT-{0000}</displayFormat>
        <label>Workflow Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>